fix media-obj class

--- a/source/ui.html
+++ b/source/ui.html
@@ -155,7 +155,7 @@ add(a, b);</code></pre>
 
           <h2>Article headline</h2>
 
-          <figure>
+          <figure class="media-obj-above">
 
             <a href="#"><img src="../assets/img/gallery/image-01.jpg" width="460" height="345"></a>
 
@@ -173,7 +173,7 @@ add(a, b);</code></pre>
 
           <h2>Article headline</h2>
 
-          <figure class="float-left">
+          <figure class="media-obj-left">
 
             <a href="#"><img src="../assets/img/gallery/image-01.jpg" width="460" height="345"></a>
 
@@ -231,17 +231,21 @@ add(a, b);</code></pre>
 
           </header>
 
-          <figure class="float-right">
+          <main>
 
-            <a href="#"><img src="../assets/img/gallery/image-01.jpg" width="460" height="345"></a>
+            <figure class="media-obj-right">
 
-            <figcaption>Image Caption</figcaption>
+              <a href="#"><img src="../assets/img/gallery/image-01.jpg" width="460" height="345"></a>
 
-          </figure>
+              <figcaption>Image Caption</figcaption>
 
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, illum, facilis minima natus ipsam recusandae iste quis praesentium perspiciatis incidunt eius adipisci at voluptate sed atque inventore maiores quos eaque!</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, illum, facilis minima natus ipsam recusandae iste quis praesentium perspiciatis incidunt eius adipisci at voluptate sed atque inventore maiores quos eaque!</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, illum, facilis minima natus ipsam recusandae iste quis praesentium perspiciatis incidunt eius adipisci at voluptate sed atque inventore maiores quos eaque!</p>
+            </figure>
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, illum, facilis minima natus ipsam recusandae iste quis praesentium perspiciatis incidunt eius adipisci at voluptate sed atque inventore maiores quos eaque!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, illum, facilis minima natus ipsam recusandae iste quis praesentium perspiciatis incidunt eius adipisci at voluptate sed atque inventore maiores quos eaque!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, illum, facilis minima natus ipsam recusandae iste quis praesentium perspiciatis incidunt eius adipisci at voluptate sed atque inventore maiores quos eaque!</p>
+
+          </main>
 
           <footer>
 
