change gallery markup

--- a/source/ui.html
+++ b/source/ui.html
@@ -380,177 +380,181 @@ add(a, b);</code></pre>
 
         <h3>Gallery</h3>
 
-        <ul class="gallery gallery-per-row-4">
+        <div class="gallery gallery-per-row-4">
 
-          <li>
+          <ul class="images">
 
-            <figure>
+            <li>
 
-              <a href="../assets/img/gallery/image-01.jpg" data-fancybox-group="gallery" class="fancybox">
-                <img src="../assets/img/gallery/image-01.jpg" alt="Alt Text" title="Title Text"/>
-              </a>
+              <figure>
 
-              <figcaption>Figcaption</figcaption>
-
-            </figure>
-
-          </li>
-
-          <li>
-
-            <figure>
-
-              <a href="../assets/img/gallery/image-02.jpg" data-fancybox-group="gallery" class="fancybox">
-                  <img src="../assets/img/gallery/image-02.jpg" alt="Alt Text" title="Title Text"/>
+                <a href="../assets/img/gallery/image-01.jpg" data-fancybox-group="gallery" class="fancybox">
+                  <img src="../assets/img/gallery/image-01.jpg" alt="Alt Text" title="Title Text"/>
                 </a>
 
-              <figcaption>Figcaption</figcaption>
+                <figcaption>Figcaption</figcaption>
 
-            </figure>
+              </figure>
 
-          </li>
+            </li>
 
-          <li>
+            <li>
 
-            <figure>
+              <figure>
 
-              <a href="../assets/img/gallery/image-03.jpg" data-fancybox-group="gallery" class="fancybox">
-                <img src="../assets/img/gallery/image-03.jpg" alt="Alt Text" title="Title Text"/>
-              </a>
+                <a href="../assets/img/gallery/image-02.jpg" data-fancybox-group="gallery" class="fancybox">
+                    <img src="../assets/img/gallery/image-02.jpg" alt="Alt Text" title="Title Text"/>
+                  </a>
 
-              <figcaption>Figcaption</figcaption>
+                <figcaption>Figcaption</figcaption>
 
-            </figure>
+              </figure>
 
-          </li>
+            </li>
 
-          <li>
+            <li>
 
-            <figure>
+              <figure>
 
-              <a href="../assets/img/gallery/image-04.jpg" data-fancybox-group="gallery" class="fancybox">
-                <img src="../assets/img/gallery/image-04.jpg" alt="Alt Text" title="Title Text"/>
-              </a>
+                <a href="../assets/img/gallery/image-03.jpg" data-fancybox-group="gallery" class="fancybox">
+                  <img src="../assets/img/gallery/image-03.jpg" alt="Alt Text" title="Title Text"/>
+                </a>
 
-              <figcaption>Figcaption</figcaption>
+                <figcaption>Figcaption</figcaption>
 
-            </figure>
+              </figure>
 
-          </li>
+            </li>
 
-          <li>
+            <li>
 
-            <figure>
+              <figure>
 
-              <a href="../assets/img/gallery/image-05.jpg" data-fancybox-group="gallery" class="fancybox">
-                <img src="../assets/img/gallery/image-05.jpg" alt="Alt Text" title="Title Text"/>
-              </a>
+                <a href="../assets/img/gallery/image-04.jpg" data-fancybox-group="gallery" class="fancybox">
+                  <img src="../assets/img/gallery/image-04.jpg" alt="Alt Text" title="Title Text"/>
+                </a>
 
-              <figcaption>Figcaption</figcaption>
+                <figcaption>Figcaption</figcaption>
 
-            </figure>
+              </figure>
 
-          </li>
+            </li>
 
-          <li>
+            <li>
 
-            <figure>
+              <figure>
 
-              <a href="../assets/img/gallery/image-06.jpg" data-fancybox-group="gallery" class="fancybox">
-                <img src="../assets/img/gallery/image-06.jpg" alt="Alt Text" title="Title Text"/>
-              </a>
+                <a href="../assets/img/gallery/image-05.jpg" data-fancybox-group="gallery" class="fancybox">
+                  <img src="../assets/img/gallery/image-05.jpg" alt="Alt Text" title="Title Text"/>
+                </a>
 
-              <figcaption>Figcaption</figcaption>
+                <figcaption>Figcaption</figcaption>
 
-            </figure>
+              </figure>
 
-          </li>
+            </li>
 
-          <li>
+            <li>
 
-            <figure>
+              <figure>
 
-              <a href="../assets/img/gallery/image-07.jpg" data-fancybox-group="gallery" class="fancybox">
-                <img src="../assets/img/gallery/image-07.jpg" alt="Alt Text" title="Title Text"/>
-              </a>
+                <a href="../assets/img/gallery/image-06.jpg" data-fancybox-group="gallery" class="fancybox">
+                  <img src="../assets/img/gallery/image-06.jpg" alt="Alt Text" title="Title Text"/>
+                </a>
 
-              <figcaption>Figcaption</figcaption>
+                <figcaption>Figcaption</figcaption>
 
-            </figure>
+              </figure>
 
-          </li>
+            </li>
 
-          <li>
+            <li>
 
-            <figure>
+              <figure>
 
-              <a href="../assets/img/gallery/image-08.jpg" data-fancybox-group="gallery" class="fancybox">
-                <img src="../assets/img/gallery/image-08.jpg" alt="Alt Text" title="Title Text"/>
-              </a>
+                <a href="../assets/img/gallery/image-07.jpg" data-fancybox-group="gallery" class="fancybox">
+                  <img src="../assets/img/gallery/image-07.jpg" alt="Alt Text" title="Title Text"/>
+                </a>
 
-              <figcaption>Figcaption</figcaption>
+                <figcaption>Figcaption</figcaption>
 
-            </figure>
+              </figure>
 
-          </li>
+            </li>
 
-          <li>
+            <li>
 
-            <figure>
+              <figure>
 
-              <a href="../assets/img/gallery/image-09.jpg" data-fancybox-group="gallery" class="fancybox">
-                <img src="../assets/img/gallery/image-09.jpg" alt="Alt Text" title="Title Text"/>
-              </a>
+                <a href="../assets/img/gallery/image-08.jpg" data-fancybox-group="gallery" class="fancybox">
+                  <img src="../assets/img/gallery/image-08.jpg" alt="Alt Text" title="Title Text"/>
+                </a>
 
-              <figcaption>Figcaption</figcaption>
+                <figcaption>Figcaption</figcaption>
 
-            </figure>
+              </figure>
 
-          </li>
+            </li>
 
-          <li>
+            <li>
 
-            <figure>
+              <figure>
 
-              <a href="../assets/img/gallery/image-10.jpg" data-fancybox-group="gallery" class="fancybox">
-                <img src="../assets/img/gallery/image-10.jpg" alt="Alt Text" title="Title Text"/>
-              </a>
+                <a href="../assets/img/gallery/image-09.jpg" data-fancybox-group="gallery" class="fancybox">
+                  <img src="../assets/img/gallery/image-09.jpg" alt="Alt Text" title="Title Text"/>
+                </a>
 
-              <figcaption>Figcaption</figcaption>
+                <figcaption>Figcaption</figcaption>
 
-            </figure>
+              </figure>
 
-          </li>
+            </li>
 
-          <li>
+            <li>
 
-            <figure>
+              <figure>
 
-              <a href="../assets/img/gallery/image-11.jpg" data-fancybox-group="gallery" class="fancybox">
-                <img src="../assets/img/gallery/image-11.jpg" alt="Alt Text" title="Title Text"/>
-              </a>
+                <a href="../assets/img/gallery/image-10.jpg" data-fancybox-group="gallery" class="fancybox">
+                  <img src="../assets/img/gallery/image-10.jpg" alt="Alt Text" title="Title Text"/>
+                </a>
 
-              <figcaption>Figcaption</figcaption>
+                <figcaption>Figcaption</figcaption>
 
-            </figure>
+              </figure>
 
-          </li>
+            </li>
 
-          <li>
+            <li>
 
-            <figure>
+              <figure>
 
-              <a href="../assets/img/gallery/image-12.jpg" data-fancybox-group="gallery" class="fancybox">
-                <img src="../assets/img/gallery/image-12.jpg" alt="Alt Text" title="Title Text"/>
-              </a>
+                <a href="../assets/img/gallery/image-11.jpg" data-fancybox-group="gallery" class="fancybox">
+                  <img src="../assets/img/gallery/image-11.jpg" alt="Alt Text" title="Title Text"/>
+                </a>
 
-              <figcaption>Figcaption</figcaption>
+                <figcaption>Figcaption</figcaption>
 
-            </figure>
+              </figure>
 
-          </li>
+            </li>
 
-        </ul>
+            <li>
+
+              <figure>
+
+                <a href="../assets/img/gallery/image-12.jpg" data-fancybox-group="gallery" class="fancybox">
+                  <img src="../assets/img/gallery/image-12.jpg" alt="Alt Text" title="Title Text"/>
+                </a>
+
+                <figcaption>Figcaption</figcaption>
+
+              </figure>
+
+            </li>
+
+          </ul>
+
+        </div>
 
       </section>
 
