remove external libs or plugins

--- a/source/ui.html
+++ b/source/ui.html
@@ -13,7 +13,9 @@
 
     <!-- viewport -->
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"><!-- webfonts -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0">
+
+    <!-- webfonts -->
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic">
 
     <!-- build:css css/styles.css-->
@@ -1102,138 +1104,6 @@ add(a, b);</code></pre>
 
       </section>
 
-      <section>
-
-        <h3>Accordion</h3>
-
-        <div class="accordion">
-
-          <h4>Accordion 1</h4>
-          <div>
-
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus, voluptate fugit quam mollitia ullam aliquam eius fugiat laborum quasi accusantium iste tempora assumenda quos! Molestiae natus repellendus officia voluptas mollitia.</p>
-
-          </div>
-
-          <h4>Accordion 2</h4>
-          <div>
-
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus, voluptate fugit quam mollitia ullam aliquam eius fugiat laborum quasi accusantium iste tempora assumenda quos! Molestiae natus repellendus officia voluptas mollitia.</p>
-
-          </div>
-
-          <h4>Accordion 3</h4>
-          <div>
-
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus, voluptate fugit quam mollitia ullam aliquam eius fugiat laborum quasi accusantium iste tempora assumenda quos! Molestiae natus repellendus officia voluptas mollitia.</p>
-
-          </div>
-
-        </div> <!-- end accordion -->
-
-      </section>
-
-      <section>
-
-        <h3>Datepicker</h3>
-        <label>Datepicker</label>
-        <input type="text" class="datepicker">
-
-      </section>
-
-      <section>
-
-        <h3>Spinner</h3>
-        <label>Spinner</label>
-        <input type="text" class="spinner">
-
-      </section>
-
-      <section>
-
-        <h3>Tabs</h3>
-
-        <div class="tabs">
-
-          <ul>
-
-            <li><a href="#section-1">Section 1</a></li>
-            <li><a href="#section-2">Section 2</a></li>
-            <li><a href="#section-3">Section 3</a></li>
-
-          </ul>
-
-          <section id="section-1">
-
-            <h4>Section 1</h4>
-
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam sed molestiae dolores maiores repellat quasi numquam, minima ipsum sapiente voluptatibus, facere enim tempore obcaecati aut delectus eaque, dolore fugit quam!</p>
-
-          </section>
-
-          <section id="section-2">
-
-            <h4>Section 2</h4>
-
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam sed molestiae dolores maiores repellat quasi numquam, minima ipsum sapiente voluptatibus, facere enim tempore obcaecati aut delectus eaque, dolore fugit quam!</p>
-
-          </section>
-
-          <section id="section-3">
-
-            <h4>Section 3</h4>
-
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam sed molestiae dolores maiores repellat quasi numquam, minima ipsum sapiente voluptatibus, facere enim tempore obcaecati aut delectus eaque, dolore fugit quam!</p>
-
-          </section>
-
-        </div> <!-- end tabs -->
-
-      </section>
-
-      <section>
-
-        <h3>Tooltip</h3>
-
-        <p>Tooltip Link</p>
-
-      </section>
-
-      <section>
-
-        <h3>CarouFredSel</h3>
-
-        <ul class="caroufredsel">
-
-          <li><img src="../assets/img/gallery/image-01.jpg" alt=""></li>
-          <li><img src="../assets/img/gallery/image-02.jpg" alt=""></li>
-          <li><img src="../assets/img/gallery/image-03.jpg" alt=""></li>
-
-        </ul>
-
-        <nav class="caroufredsel-nav">
-
-          <ul>
-
-            <li><a href="#" class="caroufredsel-prev">prev</a></li>
-            <li><a href="#" class="caroufredsel-next">next</a></li>
-
-          </ul>
-
-        </nav>
-
-      </section>
-
-      <section>
-
-        <h3>Google Maps</h3>
-
-        <div class="google-maps" id="google-maps">
-
-        </div> <!-- end google-map -->
-
-      </section>
-
       <section class="section-grid">
 
         <h3>Grid</h3>
@@ -1372,14 +1242,6 @@ add(a, b);</code></pre>
 
     <!-- build:js js/script.js -->
 
-      <script src="js/jquery-1.11.1.js"></script>
-      <script src="js/jquery-ui-1.10.4.js"></script>
-      <script src="js/jquery.carouFredSel-6.2.1.js"></script>
-      <script src="js/jquery.fancybox-2.1.5.js"></script>
-      <script src="js/jquery.fancybox-buttons-1.0.5.js"></script>
-      <script src="js/jquery.fancybox-thumbs-1.0.7.js"></script>
-      <script src="js/jquery.isotope-2.0.0.js"></script>
-      <script src="js/jquery.placeholder-2.0.8.js"></script>
       <script src="js/script.js"></script>
 
     <!-- endbuild -->
