update ui elements and add index page

--- a/source/ui.html
+++ b/source/ui.html
@@ -18,8 +18,8 @@
     <!-- webfonts -->
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic">
 
-    <!-- build:css css/styles.css-->
-    <link rel="stylesheet" href="css/styles.css">
+    <!-- build:css css/style.css -->
+    <link rel="stylesheet" href="css/style.css">
     <!-- endbuild -->
 
     <!-- icons -->
@@ -126,8 +126,8 @@
 
         <h3>Code</h3>
 
-        <pre><code>var a = 3;
-var b = 5;
+        <pre><code>var a = 3,
+    b = 5;
 
 function add(a, b) {
   return a + b;
@@ -1238,12 +1238,8 @@ add(a, b);</code></pre>
 
     </footer>
 
-    <script src="https://maps.googleapis.com/maps/api/js"></script>
-
     <!-- build:js js/script.js -->
-
-      <script src="js/script.js"></script>
-
+    <script src="js/script.js"></script>
     <!-- endbuild -->
 
   </body>
