picture element support - fix #4

--- a/source/ui.html
+++ b/source/ui.html
@@ -152,6 +152,17 @@ add(a, b);</code></pre>
 
       <section>
 
+        <picture>
+          <source media="(min-width: 960px)" srcset="http://dummyimage.com/1248x936/808080/fff.png">
+          <source media="(min-width: 640px)" srcset="http://dummyimage.com/960x720/808080/fff.png">
+          <source media="(min-width: 480px)" srcset="http://dummyimage.com/640x480/808080/fff.png">
+          <img src="http://dummyimage.com/460x345/808080/fff.png">
+        </picture>
+
+      </section>
+
+      <section>
+
         <h3>Article</h3>
 
         <article class="article">
@@ -1239,6 +1250,7 @@ add(a, b);</code></pre>
     </footer>
 
     <!-- build:js js/script.js -->
+    <script src="../bower_components/picturefill/dist/picturefill.js" async></script>
     <script src="js/script.js"></script>
     <!-- endbuild -->
 
