remove .first and .last class

--- a/source/ui.html
+++ b/source/ui.html
@@ -1034,27 +1034,27 @@ add(a, b);</code></pre>
         <nav class="nav horizontal dropdown">
 
           <ul>
-            <li class="first"><a href="#">Level 1 Item 1</a></li>
+            <li><a href="#">Level 1 Item 1</a></li>
             <li><a href="#">Level 1 Item 2</a></li>
             <li><a href="#">Level 1 Item 3</a>
               <ul>
-                <li class="first"><a href="#">Level 2 Item 1</a></li>
+                <li><a href="#">Level 2 Item 1</a></li>
                 <li><a href="#">Level 2 Item 2</a></li>
                 <li><a href="#">Level 2 Item 3</a>
                   <ul>
-                    <li class="first"><a href="#">Level 3 Item 1</a></li>
+                    <li><a href="#">Level 3 Item 1</a></li>
                     <li><a href="#">Level 3 Item 2</a></li>
                     <li><a href="#">Level 3 Item 3</a></li>
                     <li><a href="#">Level 3 Item 4</a></li>
-                    <li class="last"><a href="#">Level 3 Item 5</a></li>
+                    <li><a href="#">Level 3 Item 5</a></li>
                   </ul>
                 </li>
                 <li><a href="#">Level 2 Item 4</a></li>
-                <li class="last"><a href="#">Level 2 Item 5</a></li>
+                <li><a href="#">Level 2 Item 5</a></li>
               </ul>
             </li>
             <li><a href="#">Level 1 Item 4</a></li>
-            <li class="last"><a href="#">Level 1 Item 5</a></li>
+            <li><a href="#">Level 1 Item 5</a></li>
           </ul>
 
         </nav>
@@ -1062,27 +1062,27 @@ add(a, b);</code></pre>
         <nav class="nav vertical dropdown">
 
           <ul>
-            <li class="first"><a href="#">Level 1 Item 1</a></li>
+            <li><a href="#">Level 1 Item 1</a></li>
             <li><a href="#">Level 1 Item 2</a></li>
             <li><a href="#">Level 1 Item 3</a>
               <ul>
-                <li class="first"><a href="#">Level 2 Item 1</a></li>
+                <li><a href="#">Level 2 Item 1</a></li>
                 <li><a href="#">Level 2 Item 2</a></li>
                 <li><a href="#">Level 2 Item 3</a>
                   <ul>
-                    <li class="first"><a href="#">Level 3 Item 1</a></li>
+                    <li><a href="#">Level 3 Item 1</a></li>
                     <li><a href="#">Level 3 Item 2</a></li>
                     <li><a href="#">Level 3 Item 3</a></li>
                     <li><a href="#">Level 3 Item 4</a></li>
-                    <li class="last"><a href="#">Level 3 Item 5</a></li>
+                    <li><a href="#">Level 3 Item 5</a></li>
                   </ul>
                 </li>
                 <li><a href="#">Level 2 Item 4</a></li>
-                <li class="last"><a href="#">Level 2 Item 5</a></li>
+                <li><a href="#">Level 2 Item 5</a></li>
               </ul>
             </li>
             <li><a href="#">Level 1 Item 4</a></li>
-            <li class="last"><a href="#">Level 1 Item 5</a></li>
+            <li><a href="#">Level 1 Item 5</a></li>
           </ul>
 
         </nav>
@@ -1093,9 +1093,9 @@ add(a, b);</code></pre>
 
           <ul>
 
-            <li class="first"><a href="#">Level 1</a></li>
+            <li><a href="#">Level 1</a></li>
             <li><a href="#">Level 2</a></li>
-            <li class="last"><a href="#">Level 3</a></li>
+            <li><a href="#">Level 3</a></li>
 
           </ul>
 
