use attribute selector for checkboxes and radio buttons

--- a/source/ui.html
+++ b/source/ui.html
@@ -824,35 +824,35 @@ add(a, b);</code></pre>
               <div class="checkbox-container">
 
                 <label for="checkbox-1">Checkbox 1</label>
-                <input type="checkbox" class="input-checkbox" id="checkbox-1">
+                <input type="checkbox" id="checkbox-1">
 
               </div> <!-- end checkbox-container -->
 
               <div class="checkbox-container">
 
                 <label for="checkbox-2">Checkbox 2</label>
-                <input type="checkbox" class="input-checkbox" id="checkbox-2">
+                <input type="checkbox" id="checkbox-2">
 
               </div> <!-- end checkbox-container -->
 
               <div class="checkbox-container">
 
                 <label for="checkbox-3">Checkbox 3</label>
-                <input type="checkbox" class="input-checkbox" id="checkbox-3">
+                <input type="checkbox" id="checkbox-3">
 
               </div> <!-- end checkbox-container -->
 
               <div class="checkbox-container">
 
                 <label for="checkbox-4">Checkbox 4</label>
-                <input type="checkbox" class="input-checkbox" id="checkbox-4">
+                <input type="checkbox" id="checkbox-4">
 
               </div> <!-- end checkbox-container -->
 
               <div class="checkbox-container">
 
                 <label for="checkbox-5">Checkbox 5</label>
-                <input type="checkbox" class="input-checkbox" id="checkbox-5">
+                <input type="checkbox" id="checkbox-5">
 
               </div> <!-- end checkbox-container -->
 
@@ -863,35 +863,35 @@ add(a, b);</code></pre>
               <div class="radio-container">
 
                 <label for="radio-1">Radio 1</label>
-                <input type="radio" name="radio" class="input-radio" id="radio-1">
+                <input type="radio" name="radio" id="radio-1">
 
               </div> <!-- end radio-container -->
 
               <div class="radio-container">
 
                 <label for="radio-2">Radio 2</label>
-                <input type="radio" name="radio" class="input-radio" id="radio-2">
+                <input type="radio" name="radio" id="radio-2">
 
               </div> <!-- end radio-container -->
 
               <div class="radio-container">
 
                 <label for="radio-3">Radio 3</label>
-                <input type="radio" name="radio" class="input-radio" id="radio-3">
+                <input type="radio" name="radio" id="radio-3">
 
               </div> <!-- end radio-container -->
 
               <div class="radio-container">
 
                 <label for="radio-4">Radio 4</label>
-                <input type="radio" name="radio" class="input-radio" id="radio-4">
+                <input type="radio" name="radio" id="radio-4">
 
               </div> <!-- end radio-container -->
 
               <div class="radio-container">
 
                 <label for="radio-5">Radio 5</label>
-                <input type="radio" name="radio" class="input-radio" id="radio-5">
+                <input type="radio" name="radio" id="radio-5">
 
               </div> <!-- end radio-container -->
 
