fix btn-pill roundness and add buttons to ui.html

--- a/source/ui.html
+++ b/source/ui.html
@@ -651,7 +651,16 @@ add(a, b);</code></pre>
 
         <h3>Buttons</h3>
 
-        <button>Button</button>
+        <button class="btn">Button</button>
+
+        <button class="btn btn-rounded">Button</button>
+        <button class="btn btn-pill">Button</button>
+
+        <button class="btn btn-primary">Button</button>
+        <button class="btn btn-secondary">Button</button>
+        <button class="btn btn-success">Button</button>
+        <button class="btn btn-warning">Button</button>
+        <button class="btn btn-error">Button</button>
 
       </section>
 
