remove async attribute to preserve usemin bug

--- a/source/ui.html
+++ b/source/ui.html
@@ -1259,7 +1259,7 @@ add(a, b);</code></pre>
     </footer>
 
     <!-- build:js js/script.js -->
-    <script src="../bower_components/picturefill/dist/picturefill.js" async></script>
+    <script src="../bower_components/picturefill/dist/picturefill.js"></script>
     <script src="js/script.js"></script>
     <!-- endbuild -->
 
